force-app/main/default/objects/Disqualification_Reason__mdt/Disqualification_Reason__mdt.object-meta.xml
<CustomObject>
    <description>Defines available reasons for account disqualification, their outcome (Release vs Permanent Loss), approval requirements, and display configuration.</description>
    <label>Disqualification Reason</label>
    <pluralLabel>Disqualification Reasons</pluralLabel>
</CustomObject>