force-app/main/default/objects/Disqualification_Reason__mdt/fields/Approval_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requirement__c</fullName>
    <description>Controls approval routing: Never (auto-approve), Conditional (check account data), Always (TL approval).</description>
    <label>Approval Requirement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
            <value>
                <fullName>Always</fullName>
                <default>true</default>
                <label>Always</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>