force-app/main/default/objects/Disqualification_Reason__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this reason will not appear in the disqualification flow.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>