force-app/main/default/objects/Disqualification_Reason__mdt/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Determines the post-approval action: Release (back to Outbound) or Permanent_Loss (blacklist/discard).</description>
    <label>Outcome</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>Permanent_Loss</fullName>
                <label>Permanent Loss</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>