force-app/main/default/objects/Disqualification_Reason__mdt/fields/Reason_Value__c.field-meta.xml
<CustomField>
    <fullName>Reason_Value__c</fullName>
    <description>Value stored in Loss_Reason_Account__c picklist. Must match exactly.</description>
    <label>Reason Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>