force-app/main/default/objects/Disqualification_Reason__mdt/fields/Requires_Detail_Text__c.field-meta.xml
<CustomField>
    <fullName>Requires_Detail_Text__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the flow shows a detail text area for additional context.</description>
    <label>Requires Detail Text</label>
    <type>Checkbox</type>
</CustomField>