force-app/main/default/objects/Disqualification_Reason__mdt/fields/Requires_Duplicate_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Requires_Duplicate_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the flow shows a duplicate account lookup field.</description>
    <label>Requires Duplicate Lookup</label>
    <type>Checkbox</type>
</CustomField>