force-app/main/default/objects/Disqualification_Reason__mdt/fields/Requires_Market_Input__c.field-meta.xml
<CustomField>
    <fullName>Requires_Market_Input__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the flow shows a text input asking which market/country.</description>
    <label>Requires Market Input</label>
    <type>Checkbox</type>
</CustomField>