force-app/main/default/objects/Disqualification_Reason__mdt/fields/Sets_Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Sets_Blacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the flow sets Blacklist__c = true on the account.</description>
    <label>Sets Blacklist</label>
    <type>Checkbox</type>
</CustomField>