force-app/main/default/objects/Disqualification_Reason__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Controls display order in the screen flow. Lower numbers appear first.</description>
    <label>Sort Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>